fixed margin search button

--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -66,7 +66,7 @@
                 </div>
 
                 <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
-                    <button ladda="contenuti.options.searchWorking" class="btn btn-grey btn-block" ng-click="contenuti.searchText()">
+                    <button ladda="contenuti.options.searchWorking" class="btn btn-grey btn-block" style="margin-top: 0;" ng-click="contenuti.searchText()">
                         CERCA&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="lsf">right</span></button>
                 </div>
             </div>
