--- a/app/features/Canali/canali.view.html
+++ b/app/features/Canali/canali.view.html
@@ -10,13 +10,13 @@
 
     <!------------- body content ---------->
 
-    <div class="row page_content" style="margin-top:50px;">
+    <div class="row page_content margin-top-50px">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
             <div class="row">
 
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-                    <button class="btn btn-green pull-left" style="padding-left:12px; padding-right:12px;">
+                    <button class="btn btn-green pull-left" style="padding-left:12px; padding-right:12px;" ui-sref="home.nuovo_canale">
                         <i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;NUOVO CANALE
                     </button>
                 </div>
