--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <script type="text/javascript" src="app/features/Edizioni/edizioni.controller.js"></script>
         <script type="text/javascript" src="app/features/Canali/canali.controller.js"></script>
         <script type="text/javascript" src="app/features/Iscritti/iscritti.controller.js"></script>
+        <script type="text/javascript" src="app/features/Details/NewChannel/newchannel.controller.js"></script>
 
 
         <!-- Bootstrap core JavaScript
