tabs for new channel

--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -12,7 +12,44 @@
 
     <div class="row page_content margin-top-50px">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-            <h1>NUOVO CANALE</h1>
+            <div class="row no-padding">
+                <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+                    <h1>HEAD NEW CHANNEL</h1>
+                </div>
+            </div>
+
+            <div class="row no-padding">
+                <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+
+                    <uib-tabset active="activeJustified">
+                        <uib-tab index="0">
+                            <uib-tab-heading>
+                                <span class="lsf">file</span> IMPOSTAZIONI
+                            </uib-tab-heading>
+                            <uib-tab-body>
+                                <h3>BODY IMPOSTAZIONI</h3>
+                            </uib-tab-body>
+                        </uib-tab>
+                        <uib-tab index="1">
+                            <uib-tab-heading>
+                                <span class="lsf">file</span> CONTATTI
+                            </uib-tab-heading>
+                            <uib-tab-body>
+                                <h3>BODY CONTATTI</h3>
+                            </uib-tab-body>
+                        </uib-tab>
+                        <uib-tab index="2">
+                            <uib-tab-heading>
+                                <span class="lsf">file</span> ORARI
+                            </uib-tab-heading>
+                            <uib-tab-body>
+                                <h3>BODY ORARI</h3>
+                            </uib-tab-body>
+                        </uib-tab>
+                    </uib-tabset>
+                </div>
+            </div>
+
         </div>
     </div>
 
