--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -14,7 +14,10 @@
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
             <div class="row no-padding">
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-                    <h1>HEAD NEW CHANNEL</h1>
+                    <div class="form-group">
+                        <label class="font-small color-grey">CANALE</label>
+                        <input type="text" class="form-control" />
+                    </div>
                 </div>
             </div>
 
@@ -24,7 +27,7 @@
                     <uib-tabset active="activeJustified">
                         <uib-tab index="0">
                             <uib-tab-heading>
-                                <span class="lsf">file</span> IMPOSTAZIONI
+                                <span class="lsf">barcode</span> IMPOSTAZIONI
                             </uib-tab-heading>
                             <uib-tab-body>
                                 <h3>BODY IMPOSTAZIONI</h3>
