added edition view

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <script type="text/javascript" src="app/models/admin.model.js"></script>
         <script type="text/javascript" src="app/models/article.model.js"></script>
         <script type="text/javascript" src="app/models/channel.model.js"></script>
+        <script type="text/javascript" src="app/models/edizioni.model.js"></script>
 
         <!-- SERVICES -->
         <script type="text/javascript" src="app/services/bus.service.js"></script>
@@ -84,6 +85,7 @@
         <script type="text/javascript" src="app/services/articles.service.js"></script>
         <script type="text/javascript" src="app/services/channels.service.js"></script>
         <script type="text/javascript" src="app/services/category.service.js"></script>
+        <script type="text/javascript" src="app/services/edizioni.service.js"></script>
 
         <!-- FEATURES -->
         <script type="text/javascript" src="app/features/main.controller.js"></script>
