--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -199,3 +199,105 @@
     </div>
 
 </div>
+
+
+
+
+
+
+
+
+<!------------ SEGNALAZIONI --------------
+
+<div class="row" ng-repeat="article in contenuti.articles | limitTo:contenuti.options.pager.limit:-(contenuti.options.pager.active*contenuti.options.pager.limit)">
+<div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+
+    <div class="row">
+
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                    <img ng-src="{{contenuti.channelService.byId(article.id_channel).iconImageUrl()}}" width="35px"/>
+                </div>
+                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 no-padding">
+                    <div class="row no-padding">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <p class="font-bold no-padding no-margin">{{contenuti.channelService.byId(article.id_channel).name()}}</p>
+                        </div>
+                    </div>
+                    <div class="row no-padding">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <p class="font-small no-padding color-mid-grey no-margin"> in {{contenuti.categoryService.byId(article.id_category).ds_name | uppercase}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <p class="font-small padding-top-5">{{article.abstract()}}</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+
+            <div class="row no-padding">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <p class="font-bold no-padding no-margin">&nbsp;</p>
+                </div>
+            </div>
+            <div class="row no-padding">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <p class="color-grey font-small no-padding no-margin">ARTICOLO</p>
+                </div>
+            </div>
+
+            <div class="row no-padding">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <p class="font-medium font-bold roboto-slab-bold padding-top-5">{{article.title()}}</p>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+            <div class="row no-padding">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <p class="font-bold no-padding no-margin">&nbsp;</p>
+                </div>
+            </div>
+            <div class="row no-padding">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <p class="color-grey font-small no-padding no-margin">PUBBLICAZIONE</p>
+                </div>
+            </div>
+
+            <div class="row no-padding">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xa-12">
+                    <p ng-if="article.dt_publication_date" class="font-medium padding-top-5">{{article.publishDate() | date:'dd-MM-yyyy'}}</p>
+                    <p ng-if="!article.dt_publication_date" class="font-medium padding-top-5 font-bold"></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 no-padding">
+            <img ng-if="article.showAlertIcon()"  src="app/assets/images/alert.jpg"  style="margin-top:20px;"/>
+        </div>
+
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+            <div class="row no-padding">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <img class="img-preview-article bgcolor-grey"/>
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <div class="row">
+            <br />
+            <div class="bgcolor-light-grey" style="height: 2px;" ></div>
+            <br />
+        </div>
+    </div>
+</div>
+
+-->
