--- a/app/features/Edizioni/edizioni.view.html
+++ b/app/features/Edizioni/edizioni.view.html
@@ -10,9 +10,94 @@
 
     <!------------- body content ---------->
 
-    <div class="row page_content">
+    <div class="row page_content margin-top-50px">
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
-            <h1>EDIZIONI</h1>
+            <div class="row">
+
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+                    <button class="btn btn-green pull-left" style="padding-left:12px; padding-right:12px;">
+                        <i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;CREA NUOVA EDIZIONE
+                    </button>
+                </div>
+            </div>
+
+            <!--------- list ---------->
+
+            <br/>
+            <br/>
+            <br/>
+
+            <div class="row">
+                <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+
+                    <!---------- ELEMENT ---------->
+                    <div class="row" ng-repeat="edizione in edizioni.edizioni | limitTo:edizioni.options.pager.limit:-(edizioni.options.pager.active*edizioni.options.pager.limit)">
+                        <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+
+                            <div class="row">
+                                <!------------- FIRST COL [article description]--------->
+                                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
+                                    <div class="row no-padding">
+                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+                                            <p class="font-bold no-padding no-margin">{{edizione.name()}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!------------- SECOND COL [article title]--------->
+                                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+
+                                    <div class="row no-padding">
+                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+                                            <p class="no-padding no-margin">{{edizione.postNumber()}} post</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!------------- THIRD COL [pubblication date]--------->
+                                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
+                                    <div class="row no-padding">
+                                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
+                                            <p ng-if="edizione.status()" class="font-15 font-bold color-green">AUTORIZZATA</p>
+                                            <p ng-if="!edizione.status()" class="font-15 font-bold color-mid-grey">BOZZA</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <br />
+                                <div class="bgcolor-light-grey" style="height: 2px;" ></div>
+                                <br />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!---- END LIST --------->
+
+            <br />
+            <br />
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6"></div>
+
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+                    <!-- Single button -->
+                    <div class="btn-group pull-right" uib-dropdown is-open="contenuti.options.pager.isopen">
+                        <button id="single-button" type="button" class="btn btn-pager mydropdown" uib-dropdown-toggle>
+                            <span class="pull-left">PAGINA {{edizioni.options.pager.active}}</span>
+                            <span class="pull-right lsf ">dropdown</span>
+                        </button>
+                        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                            <li role="menuitem" ng-repeat="page in canali.generatePages()">
+                                <a ng-click="edizioni.changePage(page)">PAGINA {{page}}</a>
+                            </li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
         </div>
     </div>
 
