--- a/app/features/Edizioni/edizioni.view.html
+++ b/app/features/Edizioni/edizioni.view.html
@@ -18,7 +18,7 @@
 
                     <div class="form-group form-inline search-edition" >
                         <!--<input class="form-control no-round-right pull-left" placeholder="Seleziona la data..." type="date" style="height: 42px;width: 230px;">-->
-                        <md-datepicker class="form-control no-round-right pull-left" ng-model="ctrl.myDate" md-placeholder="Seleziona la data..."  style="height: 42px;width: 230px;"></md-datepicker>
+                        <md-datepicker md-open-on-focus class="form-control no-round-right pull-left" ng-model="edizioni.dateSelected" md-placeholder="Seleziona la data..."  style="height: 42px;width: 230px;"></md-datepicker>
 
                         <button class="btn btn-green no-round-left pull-left" style="padding-left:12px; padding-right:12px;">
                             <i class="fa fa-plus"></i>&nbsp;&nbsp;&nbsp;CREA NUOVA EDIZIONE
