--- a/app/features/Contenuti/contenuti.view.html
+++ b/app/features/Contenuti/contenuti.view.html
@@ -39,7 +39,7 @@
                 <div class="col-lg-3 col-md-3 col-sm-6 col-xs-6">
                     <div class="form-group border-line publish_date_filter">
                         <label class="font-small color-grey" style="white-space:nowrap;padding-bottom: 5px;">DATA PUBBLICAZIONE</label>
-                        <md-datepicker ng-model="contenuti.dateSelected" md-placeholder="Seleziona la data..."  style="height: 42px;width: 230px;" md-open-on-focus></md-datepicker>
+                        <md-datepicker md-open-on-focus ng-model="contenuti.dateSelected" md-placeholder="Seleziona la data..."  style="height: 42px;width: 230px;"></md-datepicker>
                     </div>
                 </div>
 
