--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
         <script type="text/javascript" src="app/libs/angular-aria/angular-aria.js"></script>
         <script type="text/javascript" src="app/libs/angular-animate/angular-animate.min.js"></script>
         <script type="text/javascript" src="app/libs/angular-material/angular-material.js"></script>
+        <script type="text/javascript" src="app/libs/moment/moment.js"></script>
         <!-- APP -->
         <script type="text/javascript" src="app/config.js"></script>
         <script type="text/javascript" src="app/app.js"></script>
