--- a/app/features/Canali/canali.view.html
+++ b/app/features/Canali/canali.view.html
@@ -84,7 +84,7 @@
 
                                 <!------------- THIRD COL [pubblication date]--------->
                                 <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                                    <div class="row">
+                                    <div class="row" ng-init="channel.stats()">
                                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"></div>
                                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                                             <div class="row no-padding">
