--- a/app/features/Edizioni/edizioni.view.html
+++ b/app/features/Edizioni/edizioni.view.html
@@ -14,7 +14,7 @@
         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
             <div class="row">
 
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 no-padding">
 
                     <div class="form-group form-inline search-edition" >
                         <!--<input class="form-control no-round-right pull-left" placeholder="Seleziona la data..." type="date" style="height: 42px;width: 230px;">-->
