--- a/app/features/Canali/canali.view.html
+++ b/app/features/Canali/canali.view.html
@@ -32,7 +32,7 @@
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
 
                     <!---------- ELEMENT ---------->
-                    <div class="row" ng-repeat="channel in canali.channels | limitTo:canali.options.pager.limit:-(canali.options.pager.active*canali.options.pager.limit)">
+                    <div class="row" ng-repeat="channel in canali.channels | limitTo:canali.options.pager.limit:-(canali.options.pager.active*canali.options.pager.limit)" ng-init="channel.statistics()">
                         <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
 
                             <div class="row">
@@ -84,7 +84,7 @@
 
                                 <!------------- THIRD COL [pubblication date]--------->
                                 <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
-                                    <div class="row" ng-init="channel.stats()">
+                                    <div class="row">
                                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3"></div>
                                         <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
                                             <div class="row no-padding">
@@ -100,7 +100,7 @@
 
                                             <div class="row no-padding">
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xa-12">
-                                                    <p class="font-15 font-bold padding-top-10">147</p>
+                                                    <p class="font-15 font-bold padding-top-10">{{channel.articleCount()}}</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -118,7 +118,7 @@
 
                                             <div class="row no-padding">
                                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xa-12">
-                                                    <p class="font-15 font-bold padding-top-10">2</p>
+                                                    <p class="font-15 font-bold padding-top-10">{{channel.reportCount()}}</p>
                                                 </div>
                                             </div>
                                         </div>
