--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -22,12 +22,16 @@
             </div>
 
             <div class="row no-padding container-hour">
-                <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
+                <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 no-padding">
 
                     <uib-tabset active="activeJustified">
                         <uib-tab index="0" id="tab0">
-                            <uib-tab-heading>
-                                <span class="lsf icon-tab">photo</span> <label >IMPOSTAZIONI</label>
+                            <uib-tab-heading class="padding-10px">
+                                <!--<span class="lsf icon-tab">photo</span> <label >IMPOSTAZIONI</label>-->
+                                <span class="font-normal font-bold span-tab">
+                                    <span class="lsf" style="font-size:25px">photo</span>
+                                    <span class="tab-title">&nbsp;&nbsp;IMPOSTAZIONI</span>
+                                </span>
                             </uib-tab-heading>
                             <uib-tab-body>
                                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 container-settings">
@@ -76,8 +80,11 @@
                             </uib-tab-body>
                         </uib-tab>
                         <uib-tab index="1" id="tab1">
-                            <uib-tab-heading>
-                                <span class="lsf icon-tab">map</span> <label >CONTATTI</label>
+                            <uib-tab-heading class="padding-10px">
+                                <span class="font-normal font-bold span-tab">
+                                    <span class="lsf icon-tab-channel">map</span>
+                                    <span class="tab-title">&nbsp;&nbsp;CONTATTI</span>
+                                </span>
                             </uib-tab-heading>
                             <uib-tab-body>
                                 <div class="row" style="margin-top: 45px">
@@ -118,8 +125,11 @@
                             </uib-tab-body>
                         </uib-tab>
                         <uib-tab index="2" id="tab2">
-                            <uib-tab-heading>
-                                <span class="lsf icon-tab">time</span> <label >ORARI</label>
+                            <uib-tab-heading class="padding-10px">
+                                <span class="font-normal font-bold span-tab">
+                                    <span class="lsf icon-tab-channel" style="font-size:30px;font-weight: 100;">time</span>
+                                    <span class="tab-title" >&nbsp;&nbsp;ORARI</span>
+                                </span>
                             </uib-tab-heading>
                             <uib-tab-body>
                                 <div class="row col-lg-12 col-sm-12 col-md-12 col-xs-12 container-hour">
