--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -16,7 +16,7 @@
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
                     <div class="form-group row border-bottom-grey">
                         <p class="font-small color-grey" for="name_new_channel">NOME CANALE</p>
-                        <input class="form-control new-channel-name ng-pristine ng-valid ng-empty ng-touched color-day-text-grey" placeholder="Nome del canale" id="name_new_channel" type="text">
+                        <input class="form-control new-channel-name color-day-text-grey" placeholder="Nome del canale" id="name_new_channel" type="text">
                     </div>
                 </div>
             </div>
@@ -51,7 +51,7 @@
                                         <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6">
                                             <p class="font-small color-grey">ICONA</p>
                                             <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 div-icon">
-                                                <button class="btn btn-info btn-selected-settings"><i class="fa fa-check"></i>&nbsp;&nbsp;&nbsp;SELEZIONA</button>
+                                                <button class="btn btn-blue-icon margin-top-20px" ><i class="fa fa-check"></i>&nbsp;&nbsp;&nbsp;SELEZIONA</button>
                                             </div>
                                         </div>
                                     </div>
@@ -59,7 +59,7 @@
                                         <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6">
                                             <div class="border-bottom-grey">
                                                 <p class="font-small color-grey">AUTORI</p>
-                                                <input class="form-control new-channel-author ng-pristine ng-valid ng-empty ng-touched table-day-text" placeholder="Nome dell'autore" type="text">
+                                                <input class="font-normal color-grey form-control new-channel-author table-day-text" placeholder="Nome dell'autore" type="text">
                                             </div>
                                         </div>
                                     </div>
@@ -91,7 +91,7 @@
                                     <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6">
                                         <div class="border-bottom-grey">
                                             <p class="font-small color-grey">INDIRIZZO</p>
-                                            <input class="form-control new-channel-author ng-pristine ng-valid ng-empty ng-touched table-day-text" placeholder="Indirizzo" type="text">
+                                            <input class="form-control new-channel-author table-day-text" placeholder="Indirizzo" type="text">
                                         </div>
                                     </div>
                                 </div>
@@ -99,19 +99,19 @@
                                     <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
                                         <div class="border-bottom-grey">
                                             <p class="font-small color-grey">TELEFONO</p>
-                                            <input class="form-control new-channel-author ng-pristine ng-valid ng-empty ng-touched table-day-text" placeholder="Telefono" type="text">
+                                            <input class="form-control new-channel-author table-day-text" placeholder="Telefono" type="text">
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
                                         <div class="border-bottom-grey">
                                             <p class="font-small color-grey">EMAIL</p>
-                                            <input class="form-control new-channel-author ng-pristine ng-valid ng-empty ng-touched table-day-text" placeholder="Email" type="text">
+                                            <input class="form-control new-channel-author table-day-text" placeholder="Email" type="email">
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
                                         <div class="border-bottom-grey">
                                             <p class="font-small color-grey">SITO INTERNET</p>
-                                            <input class="form-control new-channel-author ng-pristine ng-valid ng-empty ng-touched table-day-text" placeholder="Sito internet" type="text">
+                                            <input class="form-control new-channel-author table-day-text" placeholder="Sito internet" type="text">
                                         </div>
                                     </div>
                                 </div>
