--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -46,7 +46,11 @@
                                             </ui-select>
                                         </div>
                                         <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
-                                            <h1>Checkbox</h1>
+                                            <cs-flag
+                                                    class="my-flag-validation"
+                                                    flag-show-info="false"
+                                                    flag-selected="true"
+                                                    flag-string="INSERZIONISTA"></cs-flag>
                                         </div>
                                         <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6">
                                             <p class="font-small color-grey">ICONA</p>
@@ -134,7 +138,12 @@
                             <uib-tab-body>
                                 <div class="row col-lg-12 col-sm-12 col-md-12 col-xs-12 container-hour">
                                     <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
-                                        <h3>CHECKBOX</h3>
+
+                                        <cs-flag
+                                                class="my-flag-validation"
+                                                flag-show-info="false"
+                                                flag-selected="TRUE"
+                                                flag-string="ORARI SPECIFICI"></cs-flag>
                                     </div>
                                 </div>
                                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 container-hour">
