--- a/index.html
+++ b/index.html
@@ -90,6 +90,9 @@
         <script type="text/javascript" src="app/services/category.service.js"></script>
         <script type="text/javascript" src="app/services/edizioni.service.js"></script>
 
+        <!-- COMPONENTS -->
+        <script type="text/javascript" src="app/components/flag/flag.directive.js"></script>
+
         <!-- FEATURES -->
         <script type="text/javascript" src="app/features/main.controller.js"></script>
         <script type="text/javascript" src="app/features/Login/login.controller.js"></script>
